# kurento-my-module

./: .gitignore  CMakeLists.txt  config.h.cmake
debian/: changelog  control  my-module.install
src/gst-plugins/: CMakeLists.txt  gstcustommixer.c  gstcustommixer.h  gstmymodule.cpp  gstmymodule.h  mymodule.c
src/server/implementation/objects/: CustomMixerImpl.cpp  CustomMixerImpl.hpp
src/server/interface/: mymodule.CustomMixer.kmd.json  mymodule.MyModule.kmd.json  mymodule.kmd.json
